# termimg

./: CMakeLists.txt  README.md  main.cpp  term.h
src/: CMakeLists.txt
src/termimg-client/: CMakeLists.txt  client.cpp
src/termimg-server/: CMakeLists.txt  epoll.cpp  epoll.h  ipc-server.cpp  ipc-server.h  main.cpp  term.cpp  term.h  terminal-info.cpp  terminal-info.h
